@@ -1,3 +1,6 @@
+11/17/17
+ - change output option to filename: format1, format2, ... 
+
 11/16/17
  - using header api
 
